refactor: 优化启动迁移与管理员查询性能